# senda

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
docs/: README.md
docs/patterns/: 01-identifiable-and-paths.md  02-type-prototype-archetype.md  03-instance-references.md  04-atp-mixed-ordering.md  05-blueprints-and-derivation.md  06-splitable-and-multi-file.md  07-variation-points.md  08-admin-data-and-sdg.md  09-ecuc-definition-value.md  10-references-and-ref-bases.md  11-flat-map.md  12-multilanguage-text.md  13-data-type-mapping.md
docs/plans/: 2026-02-17-autosar-examples-design.md  2026-02-17-autosar-examples-plan.md  2026-02-17-autosar-schema-converter-design.md  2026-02-17-autosar-schema-converter-plan.md  2026-02-17-converter-improvements-design.md  2026-02-17-converter-improvements-plan.md  2026-02-17-ecuc-transformation-design.md  2026-02-17-ecuc-transformation-plan.md  2026-02-18-converter-formatting-design.md  2026-02-18-converter-formatting-plan.md  2026-02-23-unified-type-system-design.md  2026-02-23-unified-type-system-plan.md  2026-02-25-model-instances-design.md  2026-02-25-model-instances-plan.md  2026-02-26-multi-compiler-architecture-design.md  2026-02-26-multi-compiler-architecture-plan.md  2026-02-26-xsd-cpp-codegen-design.md  2026-02-26-xsd-cpp-codegen-plan.md  2026-02-27-ref-resolution-design.md  2026-02-27-ref-resolution-plan.md  2026-03-01-simd-xml-pull-parser-design.md  2026-03-01-simd-xml-pull-parser-plan.md  2026-03-04-fir-redesign-design.md  2026-03-04-fir-redesign-plan.md  2026-03-08-fir-sema-cleanup-design.md  2026-03-08-fir-sema-cleanup-plan.md  2026-03-12-xml-parse-optimization-design.md  2026-03-12-xml-parse-optimization-plan.md
docs/research/: autosar-domain-research.md  deautosar-progress.md  poc-autosar-use-cases.md
docs/use-cases/: 01-component-architecture.md  02-signal-stack.md  03-ecuc-configuration.md  04-version-migration.md  05-ecu-extract-overlay.md  06-validation-constraints.md  07-service-interface-deployment.md  08-unified-type-system.md
scripts/: update-submodules.sh
scripts/hooks/: pre-commit
src/: main.cpp
src/compiler-arxml/: CMakeLists.txt  senda.compiler-arxml.cppm  xml_pull_parser.cpp  xml_pull_parser.h  xml_simd_kernels.cpp  xml_simd_kernels.h
src/domains/: CMakeLists.txt  senda.arxml-schema.cppm  senda.domains.cppm  senda.domains.r19-11.cppm  senda.domains.r20-11.cppm  senda.domains.r21-11.cppm  senda.domains.r22-11.cppm  senda.domains.r23-11.cppm
src/emitter-arxml/: CMakeLists.txt  senda.emitter-arxml.cppm
test/compiler-arxml/: CMakeLists.txt  arxml-compiler-test.cpp  xml-pull-parser-test.cpp
test/compiler-arxml/fixtures/: anonymous-containment.arxml  entities.arxml  interleaved-props.arxml  multi-element.arxml  namespace-prefix.arxml  nested-packages.arxml  r4-3-1-signal.arxml  self-closing.arxml  simple-signal.arxml  with-comments.arxml  wrapper-role.arxml
test/data/arxml/: vehicle-comms-r20-11.arxml  vehicle-comms-r22-11.arxml  vehicle-platform-r4-3-1.arxml
test/emitter-arxml/: CMakeLists.txt  emitter-test.cpp
test/emitter-rupa/: CMakeLists.txt  emitter-rupa-test.cpp
test/integration/: CMakeLists.txt  e2e-arxml-import-test.cpp
tools/arxml-anonymizer/: anonymizer.py  cli.py  name_generator.py  word_pool.py
tools/arxml-anonymizer/tests/: test_anonymizer.py  test_name_generator.py  test_word_pool.py
tools/schema-converter/: converter.py  cpp_emitter_generator.py  cpp_generator.py  cpp_helpers.py  name_converter.py  rupa_generator.py  schema_model.py  schema_parser.py
tools/schema-converter/tests/: test_cpp_emitter_generator.py  test_cpp_generator.py  test_cpp_helpers.py  test_integration.py  test_name_converter.py  test_rupa_generator.py  test_schema_parser.py  test_xml_serialization_tags.py
